# vision-flow

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  PRD.md  README.md  pyproject.toml
.cursor/skills/revisao-codigo/: SKILL.md
.github/workflows/: ci.yml  release.yml
packaging/: installer.iss  visionflow.spec
packaging/brand/: README.md
scripts/: build_installer.py  generate_brand_svgs.py
src/visionflow/: __init__.py  __main__.py  app.py  branding.py  version.py
src/visionflow/domain/: __init__.py  bulk_operations.py  camera_backends.py  exceptions.py  file_import_result.py  gallery_defaults.py  yolo_dataset_layout.py  yolo_export_format.py
src/visionflow/domain/contracts/: __init__.py  camera.py  camera_config_repository.py  capture_repository.py  image_file_importer.py  image_storage.py  log_repository.py  recording_repository.py  thumbnail_cache.py  video_recorder.py  yolo_repository.py
src/visionflow/domain/entities/: __init__.py  camera_config.py  capture.py  device_info.py  discover_context.py  filtered_page.py  log_entry.py  recording.py  video_path.py  yolo.py
src/visionflow/infrastructure/: __init__.py  db_log_handler.py  logging_config.py  paths.py
src/visionflow/presentation/: app_settings.py  background_job_controller.py  bulk_delete_controller.py  camera_controller.py  camera_feedback.py  camera_session_state.py  crop_editor_style.py  discover_context_parser.py  filtered_gallery_controller.py  format_utils.py  gallery_batch_types.py  gallery_import_controller.py  gallery_screen_config.py  gallery_zip_export_controller.py  icon_colors.py  icon_sizes.py  icon_utils.py  image_utils.py  import_feedback.py  job_status.py  list_screen_common.py  main_thread_batch.py  media_thumbnail_loader.py  nav_icon_colors.py  navigation.py  path_utils.py  paths.py  preview_size_utils.py  qt_image_storage.py  qt_logging.py  selection_model.py  shell_utils.py  style_utils.py  system_dialogs.py  trigger_labels.py  window_chrome.py  window_constraints.py  yolo_export_controller.py  yolo_export_labels.py
(+128 files in other folders)
